// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document#withStableId annotations are ordered and have consistent ids 1`] = `
{
  "annotations": [
    {
      "attributes": {},
      "end": 13,
      "id": "00000001",
      "start": 0,
      "type": "-test-paragraph",
    },
    {
      "attributes": {},
      "end": 12,
      "id": "00000002",
      "start": 0,
      "type": "-test-bold",
    },
    {
      "attributes": {},
      "end": 3,
      "id": "00000003",
      "start": 0,
      "type": "-atjson-parse-token",
    },
    {
      "attributes": {},
      "end": 12,
      "id": "00000004",
      "start": 8,
      "type": "-atjson-parse-token",
    },
  ],
  "content": "<b>Hello</b>,
 World!",
  "contentType": "application/vnd.atjson+test",
  "schema": [
    "-test-a",
    "-test-bold",
    "-test-code",
    "-test-image",
    "-test-instagram",
    "-test-italic",
    "-test-locale",
    "-test-line-break",
    "-test-list",
    "-test-list-item",
    "-test-manual",
    "-test-paragraph",
    "-test-pre",
    "-test-quote",
  ],
}
`;

exports[`Document#withStableId annotations by id reference are equal (even when the ids are different) 1`] = `
{
  "annotations": [
    {
      "attributes": {
        "-test-citation": "00000006",
        "-test-credit": "00000003",
      },
      "end": 187,
      "id": "00000001",
      "start": 0,
      "type": "-test-quote",
    },
    {
      "attributes": {},
      "end": 190,
      "id": "00000002",
      "start": 187,
      "type": "-atjson-parse-token",
    },
    {
      "attributes": {
        "-atjson-refs": [
          "00000001",
        ],
      },
      "end": 202,
      "id": "00000003",
      "start": 190,
      "type": "-atjson-slice",
    },
    {
      "attributes": {},
      "end": 202,
      "id": "00000004",
      "start": 190,
      "type": "-test-italic",
    },
    {
      "attributes": {},
      "end": 205,
      "id": "00000005",
      "start": 202,
      "type": "-atjson-parse-token",
    },
    {
      "attributes": {
        "-atjson-refs": [
          "00000001",
        ],
      },
      "end": 237,
      "id": "00000006",
      "start": 205,
      "type": "-atjson-slice",
    },
  ],
  "content": "If any of you in any way hate homosexuals, people of different color, or women, please do this one favor for us—leave us the fuck alone! Don’t come to our shows and don’t buy our records.
  —Kurt Cobain
  “Incesticide” liner notes, 1992.",
  "contentType": "application/vnd.atjson+test",
  "schema": [
    "-test-a",
    "-test-bold",
    "-test-code",
    "-test-image",
    "-test-instagram",
    "-test-italic",
    "-test-locale",
    "-test-line-break",
    "-test-list",
    "-test-list-item",
    "-test-manual",
    "-test-paragraph",
    "-test-pre",
    "-test-quote",
  ],
}
`;

exports[`Document#withStableId ids are stable 1`] = `
{
  "annotations": [
    {
      "attributes": {},
      "end": 13,
      "id": "00000001",
      "start": 0,
      "type": "-test-paragraph",
    },
    {
      "attributes": {},
      "end": 12,
      "id": "00000002",
      "start": 0,
      "type": "-test-bold",
    },
    {
      "attributes": {},
      "end": 3,
      "id": "00000003",
      "start": 0,
      "type": "-atjson-parse-token",
    },
    {
      "attributes": {},
      "end": 12,
      "id": "00000004",
      "start": 8,
      "type": "-atjson-parse-token",
    },
  ],
  "content": "<b>Hello</b>,
 World!",
  "contentType": "application/vnd.atjson+test",
  "schema": [
    "-test-a",
    "-test-bold",
    "-test-code",
    "-test-image",
    "-test-instagram",
    "-test-italic",
    "-test-locale",
    "-test-line-break",
    "-test-list",
    "-test-list-item",
    "-test-manual",
    "-test-paragraph",
    "-test-pre",
    "-test-quote",
  ],
}
`;
